# insights-runtime-extractor-old

./: .gitignore  Containerfile  Containerfile.rust-dev  Makefile  README.adoc
docs/: fingerprints.adoc  spec.adoc
exporter/: Makefile  README.md  go.mod  go.sum
extractor/: Cargo.toml  Makefile
extractor/config/: config.toml
extractor/src/: insights_runtime_extractor.rs  lib.rs
extractor/src/insights_runtime_extractor/: container.rs  file.rs  fingerprint.rs
extractor/src/insights_runtime_extractor/fingerprint/: java.rs  native_executable.rs  version_executable.rs
fingerprints/: Makefile  go.mod  go.sum
go-fingerprints/: go.mod  main.go
insights-operator-runtime/: Cargo.toml  Makefile
insights-operator-runtime/config/: config.toml
insights-operator-runtime/e2e/: go.mod  go.sum  golang_test.go  helper.go  insights-operator-runtime-scc.yaml  main_test.go  os_test.go  quarkus_test.go  setup.sh  spring_boot_test.go  tomcat_test.go
insights-operator-runtime/manifests/: insights-operator-runtime-scc.yaml  insights-operator-runtime.yaml
insights-operator-runtime/src/: insights_operator_runtime.rs  lib.rs
insights-operator-runtime/src/insights_operator_runtime/: config.rs  container.rs  file.rs  fingerprint.rs  process.rs
insights-operator-runtime/src/insights_operator_runtime/fingerprint/: java.rs  native_executable.rs  os.rs  version_executable.rs
insights-runtime-exporter/: Makefile  README.md  go.mod
insights-runtime-extractor/: Cargo.toml
manifests/: insights-runtime-extractor.yaml
runtime-samples/: Makefile  setup.sh
scripts/: build.sh  (+3 more)
(+75 files in other folders)
