[package]
name = "insights-runtime-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.5"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
nix = {version = "0.28.0", features=["fs", "process", "sched", "user"]}
serde = { version = "1.0.202", features = ["derive"] } 
serde_json = "1.0.121"
sysinfo = "0.30.12"
toml = "0.8.13"
