[package]
name = "insights-operator-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.5"
log = "0.4.21"
nix = {version = "0.28.0", features=["fs", "process", "sched", "user"]}
rc-zip = "5.1.0"
rc-zip-sync = "4.1.0"
